# Phanes

./: .gitignore  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_GUIDE.md  Cargo.toml  DECISIONS.md  FEATURES.md  IMPROVEMENTS.md  LICENSE-APACHE  LICENSE-MIT  MANUAL.md  README.md  ROADMAP.md  development_documentation.md
assets/fonts/: LICENSE.md
examples/: llm-idea-graph.md  spatial-canvas.md
grammars/: idea_extract.gbnf
packaging/: README.md  build-appimage.sh
packaging/appimage/: phanes.desktop
sql/: schema.sql
src/: ask.rs  cli.rs  embed.rs  enrich.rs  graph.rs  indexer.rs  lib.rs  main.rs  model.rs  parser.rs  query.rs  scaffold.rs  store.rs
