[package]
name = "phanes"
version = "0.1.0"
edition = "2021"
description = "Index, search, and surface relationships across a folder of project-idea markdown files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darian-Frey/phanes"

[[bin]]
name = "phanes"
path = "src/main.rs"

# The three-panel desktop UI. Only built with `--features ui`, so the default
# CLI build pulls in no egui/windowing stack.
[[bin]]
name = "phanes-ui"
path = "src/bin/phanes-ui.rs"
required-features = ["ui"]

[lib]
name = "phanes"
path = "src/lib.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
rusqlite      = { version = "0.31", features = ["bundled"] }   # FTS5 ships in the amalgamation
walkdir       = "2"
gray_matter   = "0.2"
pulldown-cmark = "0.11"
chrono        = { version = "0.4", features = ["serde"] }
blake3        = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
thiserror     = "1"
tabled        = { version = "0.15", features = ["ansi"] }   # ansi: align colored cells
owo-colors    = { version = "4", features = ["supports-colors"] }   # tint only on a TTY

# Enrichment is opt-in. Pulls in nothing unless the `enrich` feature is on.
reqwest       = { version = "0.12", features = ["json", "blocking"], optional = true }

# Desktop UI is opt-in. Pulls in the egui/eframe stack only under `ui`.
eframe        = { version = "0.34", optional = true }
egui_commonmark = { version = "0.23", optional = true }   # must track egui 0.34
notify        = { version = "6", optional = true }         # live file-watching (F-019)

[features]
default = []
enrich  = ["dep:reqwest"]
ui      = ["dep:eframe", "dep:egui_commonmark", "dep:notify"]
